kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friendship-service
  labels:
    app: friendship-service
spec:
  selector:
    app: friendship-service
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
